[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.5"
authors = [
  "nemo <nemo@protocol.ai>",
  "dignifiedquire <me@dignifiedquire.com>",
  "laser <l@s3r.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filecoin-ffi"
readme = "README.md"
edition = "2021"
resolver = "2"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = { version = "0.11.0", default-features = false, features = ["blst"] }
blstrs = "0.4"
mimalloc = { version = "*", default-features = false }
byteorder = "1.2"
ff = { version = "0.3.1", package = "fff" }
filepath = "0.1.1"
group = "0.11"
libc = "0.2.58"
log = "0.4.7"
fil_logger = "0.1.0"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.2.1"
anyhow = "1.0.23"
bellperson = { version = "0.21", default-features = false }
serde_json = "1.0.46"
memmap = "0.7"
rust-gpu-tools = { version = "0.5", default-features = false }
storage-proofs-porep = { version = "~11.1", default-features = false }
fr32 = { version = "~4.1", default-features = false }
fvm = { version = "1.1.0", default-features = false }
fvm_ipld_car = "0.4.1"
fvm_shared = "0.8.0"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
actors-v7 = { package = "fil_builtin_actors_bundle", version = "~7.5.1" }
num-traits = "0.2.14"
num-bigint = "0.4"
cid = { version = "0.8.3", features = ["serde-codec"] }
lazy_static = "1.4.0"
once_cell = "1.9.0"
serde = "1.0.117"
serde_bytes = "0.11.5"
serde_tuple = "0.5"
futures = "0.3.5"
safer-ffi = { version = "0.0.7", features = ["proc_macros"] }

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "11.1"
#git = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
default-features = false

[dev-dependencies]
tempfile = "3.0.8"

[features]
default = ["cuda", "multicore-sdr" ]
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
opencl = ["filecoin-proofs-api/opencl", "bellperson/opencl", "storage-proofs-porep/opencl", "rust-gpu-tools/opencl", "fvm/opencl"]
cuda = ["filecoin-proofs-api/cuda", "bellperson/cuda", "storage-proofs-porep/cuda", "rust-gpu-tools/cuda", "fvm/cuda"]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]
c-headers = ["safer-ffi/headers"]

[patch.crates-io]
wasmtime = { git = "https://github.com/filecoin-project/wasmtime", branch = "fix/sse-feature" }
filecoin-proofs-api = { path = '../../../../rust-filecoin-proofs-api' }
storage-proofs-core = { path = '../../../../lin-rust-fil-proofs/storage-proofs-core' }
storage-proofs-porep = { path = '../../../../lin-rust-fil-proofs/storage-proofs-porep' }
storage-proofs-post = { path = '../../../../lin-rust-fil-proofs/storage-proofs-post' }
fr32 = { path = '../../../../lin-rust-fil-proofs/fr32' }
filecoin-proofs = { package = "filecoin-proofs", path = '../../../../lin-rust-fil-proofs/filecoin-proofs' }
filecoin-hashers = { path = '../../../../lin-rust-fil-proofs/filecoin-hashers' }
neptune = { path = '../../../../neptune' }

merkletree = { path = '../../../../merkletree' }
bellperson = { path = '../../../../lin-bellperson' }
mimalloc = { path = '../../../../mimalloc_rust' }
